<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <!-- Strings related to login -->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="input_name">Enter your name</string>
    <string name="login_title">Login to your account</string>
    <string name="register_title">Create an new account</string>
    <string name="welcome_to_our_story">Welcome to our Story</string>
    <string name="story_title">Judul Story</string>
    <string name="story_description">Deskripsi Story</string>
    <string name="home_tag">Our Story</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_story">Judul Story</string>
    <string name="deskripsi_story">Deskripsi Story</string>
    <string name="image_preview">image preview</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
</resources>